chore: add style and test configs

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "printWidth": 100,
   "singleQuote": true,
   "trailingComma": "all",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false
 }
