--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,10 @@
   "extends": [
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:jest/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["react", "react-hooks", "prettier"],
+  "plugins": ["react", "react-hooks", "prettier", "jest"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
