feat: add github repos api call

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "lint": "eslint src/**/*.{tsx,json}",
+    "lint:fix": "eslint --fix 'src/**/*.{tsx,json}'",
+    "format": "prettier --write 'src/**/*.{tsx,css,md,json}' --config ./.prettierrc",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.26.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2"
